@@ -51,6 +51,7 @@ A.F....... [ZBX-1357] updated Brazilian Portuguese and Italian translations; tha
 .......PS. [ZBX-4054] added support for SNMP values of type OID (asaveljevs)
 
 Bug fixes:
+..F....... [ZBX-8863] fixed ad-hoc graphs with multiple items for the same host not showing the hosts name (arvids)
 ..F....... [ZBX-8919] fixed range selection in graphs in IE10 and IE11 (arvids)
 A......... [ZBX-9017] fixed hostgroup.create and hostgroup.update API calls allowing setting readonly "internal" param (arvids)
 ..F....... [ZBX-9004] fixed visible corners in table cells in eventlog history (arvids)
